[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[tool.dagster]
module_name = "fieldroutes_pipeline"

[tool.poetry.dependencies]
python = "^3.8"
dagster = "^1.2.0"
dagster-snowflake = "^0.18.0"
snowflake-connector-python = "^3.0.0"
pandas = "^1.5.0"
pyyaml = "^6.0"
requests = "^2.28.0"
python-dateutil = "^2.8.2"
